--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     ]
   },
   "dependencies": {
-    "antd-mobile": "^5.13.1",
+    "antd-mobile": "5.0.0-beta.27",
     "antd-mobile-icons": "^0.2.2",
     "hox": "^1.1.6",
     "react": "^17.0.2",
@@ -45,6 +45,7 @@
     "umi-plugin-keep-alive": "^0.0.1-beta.30"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.14",
     "@umijs/fabric": "^2.10.2",
